--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "lucide-react": "^0.291.0",
-    "next": "13.4.8",
+    "next": "^13.5.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-use-websocket": "^3.0.0",
     "react-webcam": "^7.1.1",
+    "socket.io-client": "^4.7.2",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
